2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Add epc_publisher_remove and discuss publishing NULL values.

	* libepc/publisher.c: Add epc_publisher_remove. discuss NULL values.
	* libepc/consumer.c: Reference NULL value discussion in EcpPublisher.
	* docs/reference/libepc/libepc-1.0-sections.txt, libepc/publisher.h:
	Add epc_publisher_remove.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Add SUBSECTION tags to group function lists.

	* docs/reference/libepc/libepc-1.0-sections.txt: Add grouping.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Fix memory leak in the authenticate signal handler.

	* libepc-ui/password-dialog.c: Fix memory leak.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Add note regarding real argument types for the "authentication" and
	"reauthenticate" signals of EpcConsumer.

	* libepc/consumer.c: Update documentation.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Move EPC_CONSUMER_DEFAULT_TIMEOUT to consumer.c
	as it is some internal implementation detail.

	* docs/reference/libepc/libepc-1.0-sections.txt,
	libepc/consumer.h: Remove EPC_CONSUMER_DEFAULT_TIMEOUT.
	* libepc/consumer.c: Add EPC_CONSUMER_DEFAULT_TIMEOUT.

2007-11-15  Mathias Hasselmann  <mathias@openismus.com>

	Improve documentation and add epc_consumer_is_publisher_resolved.

	* docs/reference/libepc/libepc-1.0-sections.txt:
	Add epc_consumer_is_publisher_resolved.
	* libepc/consumer.c, libepc/consumer.h: Improve documentation.
	Add epc_consumer_is_publisher_resolved.
	* libepc/publisher.c, libepc/publisher.h: Improve documentation.

2007-11-14  Murray Cumming  <murrayc@openismus.com>

	Various documentation improvements.

	* docs/reference/libepc/libepc-1.0-docs.xml: Fix package names.
	* libepc/consumer.c, libepc/dispatcher.c, libepc/publisher.c,
	libepc/service-type.c: Fix grammer and spelling. Clarify sentences.

2007-11-14  Mathias Hasselmann  <mathias@openismus.com>

	Update to gtk-doc trunk.
