@@ -1,5 +1,11 @@
 2007-11-15  Mathias Hasselmann  <mathias@openismus.com>
 
+	Further discussion of epc_consumer_new_for_name.
+
+	* libepc/consumer.c: Discuss epc_consumer_new_for_name.
+
+2007-11-15  Mathias Hasselmann  <mathias@openismus.com>
+
 	Add epc_publisher_remove and discuss publishing NULL values.
 
 	* libepc/publisher.c: Add epc_publisher_remove. discuss NULL values.
